Correlated Scatter Charts.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -46,6 +46,14 @@
 	}
 }
 
+.overview {
+	.dc-chart {
+		.dc-legend {
+			display: none;
+		}
+	}
+}
+
 .tooltip {
 	.tooltip-inner {
 		text-align: left;
