--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -19,7 +19,7 @@
 	<!-- <a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a> -->
 
 	<!-- Related -->
-	<!-- <div class="row related" ng-init="getRelatedCharts()" ng-include="'views/overview/related.html'"></div> -->
+	<div class="row related" ng-init="getRelatedCharts()" ng-include="'views/overview/related.html'"></div>
 
 	<hr/>
 
