--- a/www-src/dataplay-ui/app/styles/home.less
+++ b/www-src/dataplay-ui/app/styles/home.less
@@ -20,6 +20,10 @@
 			border-radius: 3px;
 		}
 
+		.myActivity, .recentObservations, .dataExperts {
+			margin-bottom: 4px;
+		}
+
 		.dataExperts {
 			vertical-align: middle;
 			line-height: 30px;
