Use dynamic data for recent observations on home page

--- a/www-src/dataplay-ui/app/styles/home.less
+++ b/www-src/dataplay-ui/app/styles/home.less
@@ -21,7 +21,13 @@
 		}
 
 		.myActivity, .recentObservations, .dataExperts {
-			margin-bottom: 4px;
+			margin-bottom: 8px;
+		}
+
+		.recentObservations {
+			> div:first-child {
+				padding-top: 6px;
+			}
 		}
 
 		.dataExperts {
@@ -35,6 +41,7 @@
 
 		p {
 			margin: 0;
+			overflow-wrap: break-word;
 		}
 
 		.gold { color: #F1C40F; }
