--- a/www-src/dataplay-ui/app/styles/home.less
+++ b/www-src/dataplay-ui/app/styles/home.less
@@ -44,6 +44,10 @@
 			overflow-wrap: break-word;
 		}
 
+		.spinner {
+			margin: 20px auto;
+		}
+
 		.gold { color: #F1C40F; }
 		.silver { color: #BDC3C7; }
 		.bronze { color: #D96D00; }
