--- a/www-src/dataplay-ui/app/views/footer.html
+++ b/www-src/dataplay-ui/app/views/footer.html
@@ -1,3 +1,3 @@
 <div class="container">
-	<p class="text-muted">Powered by <strong><em>PlayGen</em></strong> &copy; 2014.</p>
+	<p class="text-muted text-center"><small>DataPlay is Funded by the EU for framework 7 programme, utilises CELAR Cloud Technology. Copyright &copy; 2014 <a href="http://playgen.com/">PlayGen</a>. All Rights Reserved</small></p>
 </div>
