--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -27,7 +27,7 @@
 				<div class="col-xs-4">
 					<h4>My Activity Stream</h4>
 					<div class="row myActivity" ng-if="myActivity" ng-repeat="item in myActivity">
-						{{item.pretext}}<a ng-href="{{item.url}}">{{item.linktext}}</a>
+						{{item.pretext}}<a ng-href="/#/{{item.url}}">{{item.linktext}}</a>
 					</div>
 					<div ng-if="!myActivity" ng-include="'views/loader.html'"></div>
 				</div>
