--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -6,7 +6,7 @@
 	<div class="col-sm-9 col-xs-12">
 		<form novalidate>
 			<div class="form-group">
-				<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" ng-change="search()">
+				<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" ng-change="init()">
 			</div>
 		</form>
 
@@ -14,13 +14,14 @@
 			<div class="row" ng-repeat="row in rowedResults | limitTo: rowLimit">
 				<div class="list-group-item col-sm-4" ng-repeat="result in row">
 					<div class="media-heading">
-						<h5><a ng-href="overview/{{result.GUID}}">{{result.Title}}</a></h5>
+						<h5><a href="overview/{{result.GUID}}">{{result.Title}}</a></h5>
 					</div>
 					<div class="media-body">
 						<div ng-if="row.graph.length > 0" class="dc-chart chartSwitch line" dc-chart="lineChart" dc-width="200" dc-height="150" dc-margins="{{margin}}" dc-mouse-zoomable="false" dc-brush-on="false" dc-elastic-y="true" dc-transition-duration="500" dc-colors="d3.scale.category20()" dc-render-data-points="true" dc-render-area="true" dc-post-setup-chart="lineChartPostSetup(row)" ></div>
 					</div>
 				</div>
 			</div>
+
 			<div class="row show-more" ng-click="showMore()">
 				<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 			</div>
@@ -44,8 +45,8 @@
 					</div>
 					<div class="row">
 						<div class="media-body">
-							<h5 class="media-heading"><a ng-href="{{item.url}}">{{item.title}}</a></h5>
-							<a ng-if="item.show !== false" ng-href="{{item.url}}"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
+							<h5 class="media-heading"><a href="{{item.url}}">{{item.title}}</a></h5>
+							<a ng-if="item.show !== false" href="{{item.url}}"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
 						</div>
 					</div>
 				</div>
