--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -54,3 +54,11 @@ body > .container {
 	-webkit-transform: scaleX(-1);
 	-ms-transform: scaleX(-1);
 }
+
+#about {
+	img {
+		width: 90%;
+		max-height: 90%;
+		margin: 15px auto;
+	}
+}
