Error handling in SQL Table Schema.

--- a/www-src/dataplay-ui/app/views/overview/correlated.html
+++ b/www-src/dataplay-ui/app/views/overview/correlated.html
@@ -19,7 +19,7 @@
 
 <div class="col-md-12" ng-show="!loading.correlated && hasCorrelatedCharts() <= 0">
 	<div class="jumbotron">
-		<p>Sorry we are unable to generate any Correlated data for given set.</p>
+		<p class="text-center">Sorry we are unable to generate any Correlated data for given set.</p>
 	</div>
 </div>
 
