--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -43,10 +43,11 @@
 						<span class="pull-right collapsebtn" ng-if="item.show !== false" ng-click="collapse(item)"><small><i class="glyphicon glyphicon-minus-sign"></i></small></span>
 						<span class="pull-right collapsebtn" ng-if="item.show === false" ng-click="uncollapse(item)"><small><i class="glyphicon glyphicon-plus-sign"></i></small></span>
 					</div>
+
 					<div class="row">
 						<div class="media-body">
-							<h5 class="media-heading"><a href="{{item.url}}">{{item.title}}</a></h5>
-							<a ng-if="item.show !== false" href="{{item.url}}"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
+							<h5 class="media-heading"><a href="{{item.url}}" target="_blank">{{item.title}}</a></h5>
+							<a ng-if="item.show !== false" href="{{item.url}}" target="_blank"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
 						</div>
 					</div>
 				</div>
