--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -1,3 +1,19 @@
+<div class="overview" ng-init="info()">
+	<!-- Related -->
+	<div clas="row">
+		<div class="col-md-12"><h4>Relation within <a href="overview/{{params.id}}">{{info.title}}</a></h4></div>
+	</div>
+	<div class="row related" ng-controller="OverviewRelatedCtrl" ng-init="getRelatedCharts()" ng-include="'views/overview/related.html'"></div>
+
+	<hr/>
+
+	<!-- Correlated -->
+	<div clas="row">
+		<div class="col-md-12"><h4>Correlation of <a href="overview/{{params.id}}">{{info.title}}</a></h4></div>
+	</div>
+	<div class="row correlated" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div>
+</div>
+
 <!-- Smart Caching [allows to pre-load views] -->
 <!-- Related Charts -->
 <span ng-include="'views/charts/related/line.html'"></span>
@@ -12,17 +28,3 @@
 <span ng-include="'views/charts/correlated/stacked.html'"></span>
 <span ng-include="'views/charts/correlated/bubble.html'"></span>
 <span ng-include="'views/charts/correlated/scatter.html'"></span>
-
-<div class="overview">
-	<h1>Overview</h1> <em>of</em> <h4>"{{params.id}}"</h4>
-
-	<!-- <a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a> -->
-
-	<!-- Related -->
-	<div class="row related" ng-init="getRelatedCharts()" ng-include="'views/overview/related.html'"></div>
-
-	<hr/>
-
-	<!-- Correlated -->
-	<div class="row correlated" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()" ng-include="'views/overview/correlated.html'"></div>
-</div>
