--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -16,7 +16,15 @@ body > .container {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 60px;
+
+	.container {
+		background-color: rgba(255, 255, 255, 0.9);
+		border-radius: 15px 15px 0 0;
+
+		p {
+			margin: 5px 0;
+		}
+	}
 
 	.text-muted {
 		// color: #ffffff;
@@ -39,12 +47,6 @@ body > .container {
 	.row {
 		margin-left: 0;
 		margin-right: 0;
-	}
-}
-
-.container {
-	.text-muted {
-		margin: 20px 0;
 	}
 }
 
