Stop chart info from going behind sidebar

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -129,6 +129,7 @@
 
 			.ci-val {
 				color: #464646;
+				word-wrap: break-word;
 
 				.csl:not(:last-child):after { // comma seperated list
 					content: ", ";
