UI Fixes and API error handling for Discoveries,

--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -64,3 +64,15 @@ body > .container {
 		margin: 15px auto;
 	}
 }
+
+.text-medium {
+	font-size: 18px !important;
+}
+
+.text-small {
+	font-size: 12px !important;
+}
+
+.jumbotron-medium {
+	padding: 30px;
+}
