--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -16,6 +16,7 @@ body > .container {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	height: 31px;
 
 	.container {
 		background-color: rgba(255, 255, 255, 0.9);
