--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -23,9 +23,7 @@
 				<div class="col-xs-12" ng-if="!validatePatterns" ng-include="'views/loader.html'"></div>
 
 				<div class="col-md-12" ng-show="validatePatterns.length <= 0">
-					<div class="jumbotron jumbotron-medium">
-						<p class="text-center text-medium">There are no charts currently awaiting validation.</p>
-					</div>
+					<p class="text-center text-muted">There are no charts currently awaiting validation.</p>
 				</div>
 			</div>
 		</div>
@@ -42,9 +40,7 @@
 
 					<div ng-if="!myActivity" ng-include="'views/loader.html'"></div>
 
-					<div class="jumbotron jumbotron-medium" ng-if="myActivity.length <= 0">
-						<p class="text-center text-medium">No activity to show.</p>
-					</div>
+					<p class="text-center text-muted" ng-if="myActivity.length <= 0">No activity to show.</p>
 				</div>
 
 				<div class="col-xs-4">
@@ -59,9 +55,7 @@
 
 					<div ng-if="!recentObservations" ng-include="'views/loader.html'"></div>
 
-					<div class="jumbotron jumbotron-medium" ng-if="recentObservations.length <= 0">
-						<p class="text-center text-medium">No observations to show.</p>
-					</div>
+					<p class="text-center text-muted" ng-if="recentObservations.length <= 0">No observations to show.</p>
 				</div>
 
 				<div class="col-xs-4">
@@ -81,9 +75,7 @@
 
 					<div ng-if="!dataExperts" ng-include="'views/loader.html'"></div>
 
-					<div class="jumbotron jumbotron-medium" ng-if="dataExperts.length <= 0">
-						<p class="text-center text-medium">No experts to show.</p>
-					</div>
+					<p class="text-center text-muted" ng-if="dataExperts.length <= 0">No experts to show.</p>
 				</div>
 			</div>
 		</div>
