--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -66,3 +66,9 @@
 		</div>
 	</div>
 </div>
+
+<div class="hoverfade-msg" ng-class="{true: 'show', false: ''}[validationMsg != null]" id="validation-message">
+	<i class="glyphicon glyphicon-flag purple-flag"></i>
+	<p ng-show="validationMsg == true">You validated this!</p>
+	<p ng-show="validationMsg == false">You invalidated this!</p>
+</div>
