--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -6,7 +6,7 @@
 	<div class="col-sm-9 col-xs-12">
 		<form novalidate>
 			<div class="form-group">
-				<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" ng-change="init()">
+				<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="query" ng-change="init(true)">
 			</div>
 		</form>
 
@@ -28,6 +28,10 @@
 
 			<div class="row show-more" ng-click="showMore()" ng-hide="rowedResults.length < rowLimit">
 				<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
+			</div>
+
+			<div class="row">
+				<div class="col-md-12" ng-show="loading.related" ng-include="'views/loader.html'"></div>
 			</div>
 		</div>
 
