--- a/www-src/dataplay-ui/app/views/header.html
+++ b/www-src/dataplay-ui/app/views/header.html
@@ -6,7 +6,8 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="home">DataPlay</a>
+		<a class="navbar-brand" href="home" ng-if="Auth.isAuthenticated()">DataPlay</a>
+		<a class="navbar-brand" href="/" ng-if="!Auth.isAuthenticated()">DataPlay</a>
 	</div>
 
 	<div class="navbar-collapse collapse" ng-if="Auth.isAuthenticated()">
