--- a/www-src/dataplay-ui/app/views/landing.html
+++ b/www-src/dataplay-ui/app/views/landing.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div class="row" id="graphs">
-		<div class="col-xs-2" ng-repeat="chart in chartsRelated | limitTo: 6">
+		<div class="col-xs-3" ng-repeat="chart in chartsRelated">
 			{{chart.title}}
 			<span ng-include="'views/charts/related/line.html'"></span>
 			<span ng-include="'views/charts/related/row.html'"></span>
