--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -17,23 +17,29 @@
 		<div class="col-xs-12">
 			<h3 class="text-center"><i class="glyphicon glyphicon-flag purple-flag"></i> Patterns awaiting your validation</h3>
 			<div class="row" id="validation">
-				<div class="list-group-item col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-					<div class="media-heading">
-						<h5><a href="overview/{{chart.url}}">{{chart.title}}</a></h5>
+				<div class="row">
+					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+						<div class="media-heading">
+							<h5><a href="overview/{{chart.url}}">{{chart.title}}</a></h5>
+						</div>
 					</div>
-					<a class="related media-body" href="{{chart.url}}">
-						<span ng-include="'views/charts/related/line.html'"></span>
-						<span ng-include="'views/charts/related/row.html'"></span>
-						<span ng-include="'views/charts/related/column.html'"></span>
-						<span ng-include="'views/charts/related/pie.html'"></span>
-						<span ng-include="'views/charts/related/bubble.html'"></span>
-					</a>
 				</div>
+				<div class="row">
+					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+						<a class="related media-body" href="{{chart.url}}">
+							<span ng-include="'views/charts/related/line.html'"></span>
+							<span ng-include="'views/charts/related/row.html'"></span>
+							<span ng-include="'views/charts/related/column.html'"></span>
+							<span ng-include="'views/charts/related/pie.html'"></span>
+							<span ng-include="'views/charts/related/bubble.html'"></span>
+						</a>
+					</div>
 
-				<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
+					<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
 
-				<div class="col-md-12" ng-show="chartsRelated.length <= 0">
-					<p class="text-center text-muted">There are no charts currently awaiting validation.</p>
+					<div class="col-md-12" ng-show="chartsRelated.length <= 0">
+						<p class="text-center text-muted">There are no charts currently awaiting validation.</p>
+					</div>
 				</div>
 			</div>
 		</div>
