Manage the correlated chart configuration via a helper class

--- a/www-src/app/views/charts/correlated/column.html
+++ b/www-src/app/views/charts/correlated/column.html
@@ -1,19 +1,6 @@
-<div class="dc-chart chartSwitch column"
-	ng-if="chart.type == 'column'"
-
-	id="{{chart.id}}"
-
-	dc-chart="barChart"
-
-	dc-width="{{width}}"
-	dc-height="{{height}}"
-	dc-margins="{{margin}}"
-	dc-mouse-zoomable="false"
-	dc-brush-on="false"
-
-	dc-elastic-y="true"
-	dc-transition-duration="500"
-	dc-colors="d3.scale.category20()"
-
-	dc-post-setup-chart="columnChartPostSetup"
-></div>
+<nvd3
+	class="corrChart corrColumn"
+	options="corrChart.options"
+	data="corrChart.data"
+	ng-if="corrChart.type == 'column' && corrChart.data.length > 0"
+></nvd3>
