--- a/www-src/app/views/charts/correlated/scatter.html
+++ b/www-src/app/views/charts/correlated/scatter.html
@@ -1,6 +1,6 @@
 <nvd3
 	class="corrChart corrScatter"
-	options="corrScatter.options"
-	data="corrScatter.data"
-	ng-if="corrScatter.data.length > 0"
+	options="corrChart.options"
+	data="corrChart.data"
+	ng-if="corrChart.type == 'scatter' && corrChart.data.length > 0"
 ></nvd3>
