--- a/www-src/app/views/charts/correlated/line.html
+++ b/www-src/app/views/charts/correlated/line.html
@@ -1,6 +1,6 @@
 <nvd3
 	class="corrChart corrLine"
-	options="corrLine.options"
-	data="corrLine.data"
-	ng-if="corrLine.data.length > 0"
+	options="corrChart.options"
+	data="corrChart.data"
+	ng-if="corrChart.type == 'line' && corrChart.data.length > 0"
 ></nvd3>
