--- a/www-src/app/views/charts/correlated/column.html
+++ b/www-src/app/views/charts/correlated/column.html
@@ -1,6 +1,6 @@
 <nvd3
 	class="corrChart corrColumn"
-	options="corrChart.options"
-	data="corrChart.data"
-	ng-if="corrChart.type == 'column' && corrChart.data.length > 0"
+	options="chart.options"
+	data="chart.data"
+	ng-if="chart.type == 'column' && chart.data.length > 0"
 ></nvd3>
