Add correlated chart support on home, landing and overview pages

--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -77,3 +77,9 @@ body > .container {
 .jumbotron-medium {
 	padding: 30px;
 }
+
+.no-underline {
+	&, * {
+		text-decoration: none !important;
+	}
+}
