--- a/www-src/app/views/overview/correlated.html
+++ b/www-src/app/views/overview/correlated.html
@@ -1,16 +1,13 @@
-<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.id}}" ng-show="hasCorrelatedCharts() > 0">
-	<a class="correlated" href="{{chart.url}}">
+<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.info.id}}" ng-show="hasCorrelatedCharts() > 0">
+	<a class="correlated no-underline" href="{{chart.info.url}}">
 		<span ng-include="'views/charts/correlated/line.html'"></span>
-		<span ng-include="'views/charts/correlated/row.html'"></span>
 		<span ng-include="'views/charts/correlated/column.html'"></span>
-		<span ng-include="'views/charts/correlated/stacked.html'"></span>
-		<span ng-include="'views/charts/correlated/bubble.html'"></span>
 		<span ng-include="'views/charts/correlated/scatter.html'"></span>
+		<div class="chartSwitch" ng-if="chart.data.length == 0">
+			<div class="well text-center">Oops! nothing to plot.</div>
+		</div>
 	</a>
 
-	<div class="chartSwitch" ng-if="!isPlotAllowed(chart.type)">
-		<div class="well text-center">Oops! nothing to plot.</div>
-	</div>
 </div>
 
 <div class="col-md-12" ng-show="loading.correlated" ng-include="'views/loader.html'"></div>
