--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -14,6 +14,15 @@ svg {
 	height: initial; /* Over-riding nv.d3.css */
 }
 
+.navbar-brand {
+	background-image: url('../images/logo-white.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center center;
+	text-indent: -9999px;
+	width: 130px;
+}
+
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 .footer {
