--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -24,5 +24,5 @@
 </div>
 
 <div class="nothing" ng-hide="userObservations.length > 0">
-	<p class="text-center text-muted">Oops! It seem like there is no data to show.</p>
+	<p class="text-center text-muted">Oops! It seems like there is no data to show.</p>
 </div>
