Change valid/invalid to credit/discredit

--- a/www-src/app/views/charts/info.html
+++ b/www-src/app/views/charts/info.html
@@ -1,6 +1,6 @@
 <div class="action-bar">
-	<button class="btn btn-success btn-sm" ng-click="validateChart(true)" ng-hide="info.validated || info.invalidated"><span class="glyphicon glyphicon-ok"></span> Validate</button>
-	<button class="btn btn-danger btn-sm" ng-click="validateChart(false)" ng-hide="info.validated || info.invalidated"><span class="glyphicon glyphicon-remove"></span> Invalidate</button>
+	<button class="btn btn-success btn-sm" ng-click="validateChart(true)" ng-hide="info.validated || info.invalidated"><span class="glyphicon glyphicon-ok"></span> Credit</button>
+	<button class="btn btn-danger btn-sm" ng-click="validateChart(false)" ng-hide="info.validated || info.invalidated"><span class="glyphicon glyphicon-remove"></span> Discredit</button>
 	<button class="btn btn-info btn-sm" ng-click="openAddObservationModal()"><span class="glyphicon glyphicon-comment"></span> Make observation</button>
 </div>
 
@@ -17,7 +17,7 @@
 	<div class="col-sm-6 ci-val">{{info.discoverDate}}</div>
 </div>
 <div class="row ci-row" ng-show="info.validators.length > 0">
-	<div class="col-sm-6 ci-key">Validated by</div>
+	<div class="col-sm-6 ci-key">Credited by</div>
 	<div class="col-sm-6 ci-val">
 		<span class="csl" ng-repeat="vldtr in info.validators">{{vldtr}}</span>
 	</div>
