--- a/www-src/app/views/about.html
+++ b/www-src/app/views/about.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="col-xs-8">
 				<h4>Pattern discovery</h4>
-				<p>Users are encouraged and rewarded for discovering previously unobserved datasets and any patterns within them. Multiple users can then collaborate to add further meaning to discovered patterns, validating or invalidating these discoveries, making observations, or searching for deeper connections - altering both their own reputation and the reputations of other users as they go.</p>
+				<p>Users are encouraged and rewarded for discovering previously unobserved datasets and any patterns within them. Multiple users can then collaborate to add further meaning to discovered patterns, crediting or discrediting these discoveries, making observations, or searching for deeper connections - altering both their own reputation and the reputations of other users as they go.</p>
 			</div>
 			<div class="col-xs-4"><img src="images/about3.png" /></div>
 		</div>
