--- a/www-src/app/views/charts.html
+++ b/www-src/app/views/charts.html
@@ -66,6 +66,6 @@
 
 <div class="hoverfade-msg" ng-class="{true: 'show', false: ''}[validationMsg != null]" id="validation-message">
 	<i class="glyphicon glyphicon-flag purple-flag"></i>
-	<p ng-show="validationMsg == true">You validated this!</p>
-	<p ng-show="validationMsg == false">You invalidated this!</p>
+	<p ng-show="validationMsg == true">You credited this!</p>
+	<p ng-show="validationMsg == false">You discredited this!</p>
 </div>
