--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -15,7 +15,7 @@
 
 	<div class="row" id="validation">
 		<div class="col-xs-12">
-			<h3 class="text-center"><i class="glyphicon glyphicon-flag purple-flag"></i> Patterns awaiting your validation</h3>
+			<h3 class="text-center"><i class="glyphicon glyphicon-flag purple-flag"></i> Patterns awaiting your approval</h3>
 			<div class="row" id="validation">
 				<div class="row">
 					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
@@ -46,7 +46,7 @@
 					<div class="col-xs-12" ng-if="!chartsRelated" ng-include="'views/loader.html'"></div>
 
 					<div class="col-md-12" ng-show="chartsRelated.length <= 0">
-						<p class="text-center text-muted">There are no charts currently awaiting validation.</p>
+						<p class="text-center text-muted">There are no charts currently awaiting approval.</p>
 					</div>
 				</div>
 			</div>
