--- a/www-src/app/views/home.html
+++ b/www-src/app/views/home.html
@@ -13,10 +13,10 @@
 		</div>
 	</div>
 
-	<div class="row" id="validation">
+	<div class="row" id="credit">
 		<div class="col-xs-12">
 			<h3 class="text-center"><i class="glyphicon glyphicon-flag purple-flag"></i> Patterns awaiting your approval</h3>
-			<div class="row" id="validation">
+			<div class="row" id="credit">
 				<div class="row">
 					<div class="col-xs-3" ng-repeat="chart in chartsRelated | limitTo:4" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
 						<div class="media-heading">
