--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -10,13 +10,13 @@
 				<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
 
 				<div class="votes">
-					<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-					<span>{{obsv.validationCount}}</span>
-					<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
+					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)"></i>
+					<span>{{obsv.creditCount}}</span>
+					<i class="glyphicon glyphicon-arrow-down" ng-click="creditObservation(obsv, false)"></i>
 				</div>
 			</span>
 			<div class="media-body">
-				<h4 class="media-heading">{{obsv.user.name}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span></h4>
+				<h4 class="media-heading">{{obsv.user.username}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span></h4>
 				{{obsv.message}}
 			</div>
 		</div>
