--- a/www-src/app/views/user/profile.html
+++ b/www-src/app/views/user/profile.html
@@ -5,8 +5,8 @@
 		<li ng-class="{true: 'active', false: ''}[currentTab == 'profile']">
 			<a data-toggle="tab" ng-click="changeTab('profile')" >Personal Details</a>
 		</li>
-		<li ng-class="{true: 'active', false: ''}[currentTab == 'validdiscoveries']">
-			<a data-toggle="tab" ng-click="changeTab('validdiscoveries')" >Credited Discoveries</a>
+		<li ng-class="{true: 'active', false: ''}[currentTab == 'creditdiscoveries']">
+			<a data-toggle="tab" ng-click="changeTab('creditdiscoveries')" >Credited Discoveries</a>
 		</li>
 		<li ng-class="{true: 'active', false: ''}[currentTab == 'discoveries']">
 			<a data-toggle="tab" ng-click="changeTab('discoveries')" >Discoveries</a>
@@ -53,17 +53,17 @@
 				</div>
 			</div>
 		</div>
-		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'validdiscoveries']" id="validdiscoveries">
+		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'creditdiscoveries']" id="creditdiscoveries">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
 					<p class="text-center">My Credited Discoveries</p>
-					<div ng-repeat="disc in validDiscoveries">
+					<div ng-repeat="disc in creditDiscoveries">
 						<div class="circular-icon"><i class="glyphicon glyphicon-flag"></i></div>
 						<p class="profile-li">
 							<a href="{{disc.apistring}}">{{disc.title}}</a>
 						</p>
 					</div>
-					<div ng-show="validDiscoveries.length < 1">Nothing to show</div>
+					<div ng-show="creditDiscoveries.length < 1">Nothing to show</div>
 				</div>
 			</div>
 		</div>
