--- a/www-src/app/styles/overviewscreen.less
+++ b/www-src/app/styles/overviewscreen.less
@@ -64,8 +64,9 @@
 }
 
 #pie-tooltip {
+	position: fixed;
 	width: 150px;
 	max-width: 150px;
-	margin-left: -150px;
-	margin-top: -150px;
+	margin-left: -75px;
+	margin-top: -100px;
 }
