Add social login buttons to login page

--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -20,3 +20,11 @@
 		<a href="user/forgotpassword">Forgot your password?</a>
 	</div>
 </form>
+<div class="col-md-4 col-md-offset-4 text-center" ng-controller="UserCtrl">
+	<h5>or log in using:</h5>
+	<ul id="social-logins">
+		<li><button class="btn btn-primary social-login-btns" id="social-logins-facebook" ng-click="socialLogin('facebook')"><i class="fa fa-lg fa-facebook"></i></button></li>
+		<li><button class="btn btn-primary social-login-btns" id="social-logins-twitter" ng-click="socialLogin('twitter')"><i class="fa fa-lg fa-twitter"></i></button></li>
+		<li><button class="btn btn-primary social-login-btns" id="social-logins-google" ng-click="socialLogin('google')"><i class="fa fa-lg fa-google-plus"></i></button></li>
+	</ul>
+</div>
