Remove twitter social login (no email), and add unshown windows login setup

--- a/www-src/app/styles/user.less
+++ b/www-src/app/styles/user.less
@@ -16,10 +16,10 @@
 				border-color: darken(#3B5998, 15%);
 				color: #FFFFFF;
 			}
-			&#social-logins-twitter {
-				background-color: #55ACEE;
-				border-color: darken(#55ACEE, 15%);
-				color: #F5F8FA;
+			&#social-logins-windows {
+				background-color: #F25022;
+				border-color: darken(#F25022, 15%);
+				color: #FFFFFF;
 			}
 			&#social-logins-google {
 				background-color: #d34836;
