--- a/www-src/app/views/user/login.html
+++ b/www-src/app/views/user/login.html
@@ -28,7 +28,7 @@
 				<h4>or log in using:</h4>
 				<ul id="social-logins">
 					<li><button class="btn btn-primary social-login-btns" id="social-logins-facebook" ng-click="socialLogin('facebook')"><i class="fa fa-lg fa-facebook"></i></button></li>
-					<li><button class="btn btn-primary social-login-btns" id="social-logins-twitter" ng-click="socialLogin('twitter')"><i class="fa fa-lg fa-twitter"></i></button></li>
+					<!-- <li><button class="btn btn-primary social-login-btns" id="social-logins-windows" ng-click="socialLogin('windows')"><i class="fa fa-lg fa-windows"></i></button></li> -->
 					<li><button class="btn btn-primary social-login-btns" id="social-logins-google" ng-click="socialLogin('google')"><i class="fa fa-lg fa-google-plus"></i></button></li>
 				</ul>
 			</div>
