--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -34,7 +34,7 @@
 
 					<div class="row">
 						<div class="col-xs-12">
-							<p><a href="user/register" class="btn btn-primary">Register Now</a></p>
+							<p><a href="user/login" class="btn btn-primary">Register Now</a></p>
 							<p>It's Free!</p>
 						</div>
 					</div>
