Implement modals on admin/users page for viewing

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -16,6 +16,15 @@
 		border-radius: 3px;
 	}
 
+	.avatar-150 {
+		max-height: 150px;
+		max-width: 150px;
+		margin: 5px auto;
+		border-radius: 10%;
+	}
+
 	.gold { color: #F1C40F; }
 	.bold { font-weight: bold; }
+	.check { color: #2ECC40; }
+	.times { color: #FF4136; }
 }
