--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -1,4 +1,5 @@
 <div class="admin admin-users" ng-init="init()">
+	<h2>Administrate Users</h2>
 	<table class="table table-bordered table-hover table-striped">
 		<tr>
 			<th>#</th>
@@ -19,15 +20,61 @@
 				</div>
 			</td>
 			<td class="text-center">
-				<i class="fa fa-2x fa-check" ng-if="user.usertype == 1"></i>
+				<i class="fa fa-2x fa-check check" title="This user is an administrator" ng-if="user.usertype == 1"></i>
+				<i class="fa fa-2x fa-times times" title="This user is not an administrator" ng-if="user.usertype !== 1"></i>
 			</td>
 			<td class="minimum-width text-right">
 				<div class="btn-group">
-					<button type="button" class="btn btn-sm btn-primary" ng-click="view(user)">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-info" ng-click="edit(user)">&nbsp;<i class="fa fa-pencil"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-danger" ng-click="disable(user)">&nbsp;<i class="fa fa-times"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-primary" ng-click="view(user)" title="View">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-info" ng-click="edit(user)" title="Edit">&nbsp;<i class="fa fa-pencil"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-danger" ng-click="disable(user)" title="Disable">&nbsp;<i class="fa fa-times"></i>&nbsp;</button>
 				</div>
 			</td>
 		</tr>
-</table>
+	</table>
+
+	<div id="admin-modal" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<h4>{{modal.content.title}} {{modal.content.item.username}}</h4>
+				<div ng-if="modal.content.type == 'view'">
+					<div class="text-center">
+						<img class="avatar-150" ng-src="{{modal.content.item.avatar}}"/>
+					</div>
+					<table class="table table-bordered table-hover table-striped">
+						<tr>
+							<th>#</th>
+							<td>{{modal.content.item.id}}</td>
+						</tr>
+						<tr>
+							<th>Username</th>
+							<td>{{modal.content.item.username}}</td>
+						</tr>
+						<tr>
+							<th>Reputation</th>
+							<td>
+							<div class="gold bold">
+									<i class="glyphicon glyphicon-star"></i>
+									<span>{{modal.content.item.reputation}}</span>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<th>Admin?</th>
+							<td>
+								<i class="fa fa-lg fa-check check" title="This user is an administrator" ng-if="modal.content.item.usertype == 1"></i>
+								<i class="fa fa-lg fa-times times" title="This user is not an administrator" ng-if="modal.content.item.usertype !== 1"></i>
+							</td>
+						</tr>
+					</table>
+					<div class="text-center">
+						<button class="btn btn-primary text-center" ng-click="closeModal()">Okay</button>
+					</div>
+				</div>
+				<div ng-if="modal.content.type == 'edit'">editing</div>
+				<div ng-if="modal.content.type == 'disable'">disabling</div>
+			</div>
+		</div>
+	</div>
 </div>
+
