Display the correct avatars

--- a/www-src/app/views/charts/observations.html
+++ b/www-src/app/views/charts/observations.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="row">
 			<span class="left pull-left">
-				<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
+				<img class="media-object" data-src="{{obsv.user.avatar}}" src="{{obsv.user.avatar}}">
 
 				<div class="votes">
 					<i class="glyphicon glyphicon-arrow-up" ng-click="creditObservation(obsv, true)"></i>
