Add pagination to admin/users page

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -28,3 +28,38 @@
 	.check { color: #2ECC40; }
 	.times { color: #FF4136; }
 }
+
+.pagination-plain {
+	@paginationPlainBgColour: #EFEFEF;
+	@paginationPlainTextColour: #222222;
+	li a {
+		color: @paginationPlainTextColour;
+		background-color: @paginationPlainBgColour;
+		border-color: darken(@paginationPlainBgColour, 10%);
+		&:hover {
+			color: @paginationPlainTextColour;
+			background-color: darken(@paginationPlainBgColour, 5%);
+			border-color: darken(@paginationPlainBgColour, 15%);
+		}
+	}
+	li.active a {
+		color: @paginationPlainTextColour;
+		background-color: darken(@paginationPlainBgColour, 5%);
+		border-color: darken(@paginationPlainBgColour, 15%);
+		&:hover {
+			color: @paginationPlainTextColour;
+			background-color: darken(@paginationPlainBgColour, 5%);
+			border-color: darken(@paginationPlainBgColour, 15%);
+		}
+	}
+	li.disabled a {
+		color: darken(@paginationPlainBgColour, 10%);
+		background-color: lighten(@paginationPlainBgColour, 2%);
+		border-color: darken(@paginationPlainBgColour, 10%);
+		&:hover {
+			color: darken(@paginationPlainBgColour, 10%);
+			background-color: lighten(@paginationPlainBgColour, 2%);
+			border-color: darken(@paginationPlainBgColour, 10%);
+		}
+	}
+}
