Add validation to edit modal on admin/users page

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -23,10 +23,22 @@
 		border-radius: 10%;
 	}
 
+	.reputation {
+		.gold;
+		.bold;
+		input {
+			display: inline-block;
+			width: calc(~"100% - 18px");
+			.gold;
+			.bold;
+		}
+	}
+
 	.gold { color: #F1C40F; }
 	.bold { font-weight: bold; }
 	.check { color: #2ECC40; }
 	.times { color: #FF4136; }
+	.inline { display: inline-block; }
 }
 
 .pagination-plain {
