--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -9,7 +9,7 @@
 			<th>Admin?</th>
 			<th></th>
 		</tr>
-		<tr ng-repeat="user in users | limitTo: (10 * pagination.pageNumber) > users.length ? users.length : (10 * pagination.pageNumber) | limitTo: 10 * pagination.pageNumber <= users.length ? -10 : -(users.length % 10)">
+		<tr ng-repeat="user in users | limitTo: (pagination.perPage * pagination.pageNumber) > users.length ? users.length : (pagination.perPage * pagination.pageNumber) | limitTo: pagination.perPage * pagination.pageNumber <= users.length ? -pagination.perPage : -(users.length % pagination.perPage)">
 			<td>{{user.id}}</td>
 			<td class="text-center"><img class="avatar" ng-src="{{user.avatar}}"/></td>
 			<td>{{user.username}}</td>
@@ -25,9 +25,9 @@
 			</td>
 			<td class="minimum-width text-right">
 				<div class="btn-group">
-					<button type="button" class="btn btn-sm btn-primary" ng-click="view(user)" title="View">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-info" ng-click="edit(user)" title="Edit">&nbsp;<i class="fa fa-pencil"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-danger" ng-click="disable(user)" title="Disable">&nbsp;<i class="fa fa-times"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-primary" ng-click="showModal('view', user)" title="View">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-info" ng-click="showModal('edit', user)" title="Edit">&nbsp;<i class="fa fa-pencil"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-danger" ng-click="showModal('disable', user)" title="Disable">&nbsp;<i class="fa fa-times"></i>&nbsp;</button>
 				</div>
 			</td>
 		</tr>
@@ -44,45 +44,67 @@
 	<div id="admin-modal" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<h4>{{modal.content.title}} {{modal.content.item.username}}</h4>
-				<div ng-if="modal.content.type == 'view'">
+				<h4>{{modal.actions[modal.content.type]}} {{modal.content.item.username}}</h4>
+				<div ng-if="modal.content.type == 'view' || modal.content.type == 'edit'">
+					<form name="editForm" role="form" ng-submit="submitForm()">
+						<div class="text-center">
+							<img class="avatar-150 inline" ng-src="{{modal.content.item.avatar}}"/>
+							<div class="inline" ng-if="modal.content.type == 'edit'">
+								<button class="btn btn-danger btn-xs">Remove</button>
+							</div>
+						</div>
+						<table class="table table-bordered table-hover table-striped">
+							<tr>
+								<th class="col-xs-4">#</th>
+								<td class="col-xs-8">{{modal.content.item.id}}</td>
+							</tr>
+							<tr>
+								<th>Username</th>
+								<td ng-if="modal.content.type == 'view'">{{modal.content.item.username}}</td>
+								<td ng-if="modal.content.type == 'edit'"><input type="text" class="form-control input-sm" ng-model="modal.content.item.username" ng-pattern="/^([A-Za-z0-9]{4,})$/" ng-required="true"></input></td>
+							</tr>
+							<tr>
+								<th>Reputation</th>
+								<td ng-if="modal.content.type == 'view'">
+									<div class="reputation">
+										<i class="glyphicon glyphicon-star"></i>
+										<span>{{modal.content.item.reputation}}</span>
+									</div>
+								</td>
+								<td ng-if="modal.content.type == 'edit'">
+									<div class="reputation">
+										<i class="glyphicon glyphicon-star"></i>
+										<input type="number" class="form-control input-sm" ng-model="modal.content.item.reputation" ng-min="0" ng-required="true"></input>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<th>Admin?</th>
+								<td ng-if="modal.content.type == 'view'">
+									<i class="fa fa-lg fa-check check" title="This user is an administrator" ng-if="modal.content.item.usertype"></i>
+									<i class="fa fa-lg fa-times times" title="This user is not an administrator" ng-if="!modal.content.item.usertype"></i>
+								</td>
+								<td ng-if="modal.content.type == 'edit'">
+									<input type="checkbox" ng-model="modal.content.item.usertype">
+								</td>
+							</tr>
+						</table>
+						<div class="text-center">
+							<button type="button" class="btn btn-info text-center" ng-click="modal.content.type = 'edit'" ng-if="modal.content.type == 'view'"><i class="fa fa-pencil"></i> Edit</button>
+							<button type="button" class="btn btn-primary text-center" ng-click="edit()" ng-if="modal.content.type == 'edit'" ng-disabled="!editForm.$valid"><i class="fa fa-save"></i> Save</button>
+							<button type="button" class="btn btn-danger text-center" ng-click="modal.content.type = 'disable'"><i class="fa fa-times"></i> Disable User</button>
+							<button type="button" class="btn btn-default text-center" ng-click="closeModal()">Close</button>
+						</div>
+					</form>
+				</div>
+				<div ng-if="modal.content.type == 'disable'">
+					<p>Are you sure you want to disable this user?</p>
 					<div class="text-center">
-						<img class="avatar-150" ng-src="{{modal.content.item.avatar}}"/>
-					</div>
-					<table class="table table-bordered table-hover table-striped">
-						<tr>
-							<th>#</th>
-							<td>{{modal.content.item.id}}</td>
-						</tr>
-						<tr>
-							<th>Username</th>
-							<td>{{modal.content.item.username}}</td>
-						</tr>
-						<tr>
-							<th>Reputation</th>
-							<td>
-							<div class="gold bold">
-									<i class="glyphicon glyphicon-star"></i>
-									<span>{{modal.content.item.reputation}}</span>
-								</div>
-							</td>
-						</tr>
-						<tr>
-							<th>Admin?</th>
-							<td>
-								<i class="fa fa-lg fa-check check" title="This user is an administrator" ng-if="modal.content.item.usertype == 1"></i>
-								<i class="fa fa-lg fa-times times" title="This user is not an administrator" ng-if="modal.content.item.usertype !== 1"></i>
-							</td>
-						</tr>
-					</table>
-					<div class="text-center">
-						<button class="btn btn-primary text-center" ng-click="closeModal()">Okay</button>
+						<button type="button" class="btn btn-danger text-center" ng-click="disable()"><i class="fa fa-times"></i> Disable</button>
+						<button type="button" class="btn btn-default text-center" ng-click="closeModal()">Cancel</button>
 					</div>
 				</div>
-				<div ng-if="modal.content.type == 'edit'">editing</div>
-				<div ng-if="modal.content.type == 'disable'">disabling</div>
 			</div>
 		</div>
 	</div>
 </div>
-
