Add pagination to /admin/users modals

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -19,6 +19,7 @@
 	.avatar-150 {
 		max-height: 150px;
 		max-width: 150px;
+		height: 150px;
 		margin: 5px auto;
 		border-radius: 10%;
 	}
@@ -39,6 +40,14 @@
 	.check { color: #2ECC40; }
 	.times { color: #FF4136; }
 	.inline { display: inline-block; }
+	.no-margin { margin: 0; }
+}
+
+.pagination-xs {
+	> li > a, > li > span {
+		padding: 5px 7px;
+		font-size: 10px;
+	}
 }
 
 .pagination-plain {
