Add ability to enable users on /admin/users page

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -5,8 +5,11 @@
 		vertical-align: middle;
 	}
 
-	td.minimum-width {
+	td.userControls {
 		width: 125px;
+		button {
+			width: 36px;
+		}
 	}
 
 	.avatar {
