--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -23,11 +23,12 @@
 				<i class="fa fa-2x fa-check check" title="This user is an administrator" ng-if="user.usertype == 1"></i>
 				<i class="fa fa-2x fa-times times" title="This user is not an administrator" ng-if="user.usertype !== 1"></i>
 			</td>
-			<td class="minimum-width text-right">
+			<td class="userControls text-right">
 				<div class="btn-group">
-					<button type="button" class="btn btn-sm btn-primary" ng-click="showModal('view', user)" title="View">&nbsp;<i class="fa fa-search"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-info" ng-click="showModal('edit', user)" title="Edit">&nbsp;<i class="fa fa-pencil"></i>&nbsp;</button>
-					<button type="button" class="btn btn-sm btn-danger" ng-click="showModal('disable', user)" title="Disable">&nbsp;<i class="fa fa-times"></i>&nbsp;</button>
+					<button type="button" class="btn btn-sm btn-primary" ng-click="showModal('view', user)" title="View"><i class="fa fa-search"></i></button>
+					<button type="button" class="btn btn-sm btn-info" ng-click="showModal('edit', user)" title="Edit"><i class="fa fa-pencil"></i></button>
+					<button type="button" class="btn btn-sm btn-danger" ng-click="showModal('disable', user)" ng-if="user.enabled" title="Disable"><i class="fa fa-times"></i></button>
+					<button type="button" class="btn btn-sm btn-success" ng-click="showModal('disable', user)" ng-if="!user.enabled" title="Enable"><i class="fa fa-check"></i></button>
 				</div>
 			</td>
 		</tr>
@@ -44,12 +45,12 @@
 	<div id="admin-modal" class="modal fade" role="dialog">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<h4>{{modal.actions[modal.content.type]}} {{modal.content.item.username}}</h4>
 				<div class="text-center">
-					<ul class="pagination pagination-xs pagination-plain no-margin">
+					<ul class="pagination pagination-xs pagination-plain">
 						<li ng-class="{active: modal.content.type == 'view'}"><a href="#" ng-click="modal.content.type = 'view'"><i class="fa fa-search"></i> View</a></li>
 						<li ng-class="{active: modal.content.type == 'edit'}"><a href="#" ng-click="modal.content.type = 'edit'"><i class="fa fa-pencil"></i> Edit</a></li>
-						<li ng-class="{active: modal.content.type == 'disable'}"><a href="#" ng-click="modal.content.type = 'disable'"><i class="fa fa-times"></i> Disable</a></li>
+						<li ng-class="{active: modal.content.type == 'disable'}" ng-if="modal.content.item.enabled"><a href="#" ng-click="modal.content.type = 'disable'"><i class="fa fa-times"></i> Disable</a></li>
+						<li ng-class="{active: modal.content.type == 'disable'}" ng-if="!modal.content.item.enabled"><a href="#" ng-click="modal.content.type = 'disable'"><i class="fa fa-check"></i> Enable</a></li>
 					</ul>
 				</div>
 				<div ng-if="modal.content.type == 'view' || modal.content.type == 'edit'">
@@ -103,9 +104,11 @@
 					</form>
 				</div>
 				<div ng-if="modal.content.type == 'disable'">
-					<p>Are you sure you want to disable this user?</p>
+					<p ng-if="modal.content.item.enabled">Are you sure you want to disable this user?</p>
+					<p ng-if="!modal.content.item.enabled">Are you sure you want to enable this user?</p>
 					<div class="text-center">
-						<button type="button" class="btn btn-danger text-center" ng-click="disable()"><i class="fa fa-times"></i> Disable</button>
+						<button type="button" class="btn btn-danger text-center" ng-if="modal.content.item.enabled" ng-click="disable(false)"><i class="fa fa-times"></i> Disable</button>
+						<button type="button" class="btn btn-success text-center" ng-if="!modal.content.item.enabled" ng-click="disable(true)"><i class="fa fa-check"></i> Enable</button>
 						<button type="button" class="btn btn-default text-center" ng-click="closeModal()">Cancel</button>
 					</div>
 				</div>
