Implement orderby on /admin/users

--- a/www-src/app/styles/admin.less
+++ b/www-src/app/styles/admin.less
@@ -62,6 +62,7 @@
 	.times { color: #FF4136; }
 	.inline { display: inline-block; }
 	.no-margin { margin: 0; }
+	.clickable { cursor: pointer; }
 }
 
 .pagination-xs {
