--- a/www-src/app/views/admin/users.html
+++ b/www-src/app/views/admin/users.html
@@ -2,12 +2,36 @@
 	<h2>Administrate Users</h2>
 	<table class="table table-bordered table-hover table-striped">
 		<tr>
-			<th>#</th>
-			<th>Avatar</th>
-			<th>Username</th>
-			<th>Email Address</th>
-			<th>Reputation</th>
-			<th>Admin?</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'uid'" ng-click="orderby('uid')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'uid'"></i>
+				<span>#</span>
+			</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'avatar'" ng-click="orderby('avatar')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'avatar'"></i>
+				<span>Avatar</span>
+			</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'username'" ng-click="orderby('username')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'username'"></i>
+				<span>Username</span>
+			</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'email'" ng-click="orderby('email')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'email'"></i>
+				<span>Email Address</span>
+			</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'reputation'" ng-click="orderby('reputation')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'reputation'"></i>
+				<span>Reputation</span>
+			</th>
+			<th>
+				<i class="fa fa-caret-square-o-down clickable" ng-if="pagination.orderby != 'usertype'" ng-click="orderby('usertype')"></i>
+				<i class="fa fa-sort-desc" ng-if="pagination.orderby == 'usertype'"></i>
+				<span>Admin?</span>
+			</th>
 			<th></th>
 		</tr>
 		<tr ng-if="users.length === 0"><td colspan="7" ng-include="'../views/loader.html'"></td></tr>
